changed email recipient. fixed time zone issue for calendar. margin for email form on safari.

--- a/EliteK9/Css/Schedule.css
+++ b/EliteK9/Css/Schedule.css
@@ -25,7 +25,8 @@ iframe{
 
 .emailForm{
     /*margin: 0px;*/
-    margin-bottom: 200px;
+    display: inline-block;
+    margin-bottom: 50px;
 }
 
 .emailBg {
